--- a/HP1 Cars.ipynb
+++ b/HP1 Cars.ipynb
@@ -146,6 +146,34 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "bNeh3ZEZ2mCS",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Data Correlation**\n",
+        "Can the correlation of the data help improve the model?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CsoTUvWY2i24",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "corr = dataset.corr()\n",
+        "sns.heatmap(corr, \n",
+        "            xticklabels=corr.columns.values,\n",
+        "            yticklabels=corr.columns.values)\n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "5YaS1HbKlG2T",
         "colab_type": "text"
       },
@@ -594,7 +622,11 @@
         "colab_type": "text"
       },
       "source": [
-        "Visualize the model's training progress using the stats stored in the `history` object."
+        "# **Train the model**<br>\n",
+        "The number of epochs is set by the early stopping, so there is no need to tune it. <br>\n",
+        "\n",
+        "<br>\n",
+        "But you will want to tune the batch_size"
       ]
     },
     {
@@ -611,7 +643,7 @@
         "# The patience parameter is the amount of epochs to check for improvement\n",
         "early_stop = keras.callbacks.EarlyStopping(monitor='val_loss', patience=10)\n",
         "\n",
-        "history = model.fit(normed_train_data, train_labels, epochs=EPOCHS,\n",
+        "history = model.fit(normed_train_data, train_labels, epochs=EPOCHS,batch_size=2,\n",
         "                    validation_split = 0.2, verbose=0, callbacks=[early_stop])\n",
         "\n",
         "plot_history(history)"
