--- a/HP5 muffinOrDog.ipynb
+++ b/HP5 muffinOrDog.ipynb
@@ -6,7 +6,7 @@
       "name": "muffinOrDog.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMu28KM0ts8m3Z0sLpV1jJ/",
+      "authorship_tag": "ABX9TyNGkdOQXjZ+/ccff8b4CNU9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/cagBRT/Machine-Learning/blob/master/muffinOrDog.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/cagBRT/Machine-Learning/blob/master/HP5%20muffinOrDog.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -349,6 +349,19 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pt-2iQ_J38FD",
+        "colab_type": "text"
+      },
+      "source": [
+        "Change the number of epochs<br>\n",
+        "Change the batch_size<br>\n",
+        "<br>\n",
+        "Keep in mind the small trainset size"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "t8MlG0QXA-cu",
@@ -356,7 +369,7 @@
         "colab": {}
       },
       "source": [
-        "model.fit(train_images, train_labels, epochs=100)"
+        "model.fit(train_images, train_labels, epochs=100,batch_size=5)"
       ],
       "execution_count": 0,
       "outputs": []
