--- a/HP5 muffinOrDog.ipynb
+++ b/HP5 muffinOrDog.ipynb
@@ -6,7 +6,7 @@
       "name": "muffinOrDog.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNGkdOQXjZ+/ccff8b4CNU9",
+      "authorship_tag": "ABX9TyOpataBMFvEsXQEjgcrISOa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -244,8 +244,7 @@
         "colab": {}
       },
       "source": [
-        "test_images.shape\n",
-        "(14, 100, 100)\n",
+        "print(test_images.shape)\n",
         "print(test_labels)"
       ],
       "execution_count": 0,
@@ -320,11 +319,13 @@
       },
       "source": [
         "# Setting up the layers.\n",
+        "#Change the number of neurons in the layers\n",
+        "#Change the activation function\n",
         "\n",
         "model = keras.Sequential([\n",
         "    keras.layers.Flatten(input_shape=(100, 100)),\n",
-        "        keras.layers.Dense(128, activation=tf.nn.sigmoid),\n",
-        "        keras.layers.Dense(16, activation=tf.nn.sigmoid),\n",
+        "        keras.layers.Dense(12, activation=tf.nn.sigmoid),\n",
+        "        keras.layers.Dense(12, activation=tf.nn.sigmoid),\n",
         "    keras.layers.Dense(2, activation=tf.nn.softmax)\n",
         "])"
       ],
