--- a/HP1 Cars.ipynb
+++ b/HP1 Cars.ipynb
@@ -708,7 +708,9 @@
         "colab_type": "text"
       },
       "source": [
-        "Add the missing data:"
+        "Add the missing data:<br>\n",
+        "To find the missing data rows use the following:<br><br>\n",
+        "dataset[dataset[\"Horsepower\"].isna() == True]"
       ]
     },
     {
