--- a/HP3 boston_housing.ipynb
+++ b/HP3 boston_housing.ipynb
@@ -6,7 +6,7 @@
       "name": "boston_housing.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNL1xBcSoQfqJzSAVQg4S9d",
+      "authorship_tag": "ABX9TyPJLnTrgLkv/NPW9+EFJ42r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -173,6 +173,44 @@
       },
       "source": [
         "boston_housing_data.isna().sum()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "g0n4rhYdSLVd",
+        "colab_type": "text"
+      },
+      "source": [
+        "Sometimes model performance can be improved by grouping (or binning) the data. <br>\n",
+        "<br>\n",
+        "Binning methods smooth a sorted data value by consulting its “neighborhood”, that is, the values around it."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sttw92mGSzRC",
+        "colab_type": "text"
+      },
+      "source": [
+        "Uncomment the code below to use binning on the column. You can modify the code and use it on other columns. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6s6YxDUyPlkW",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#boston_housing_data['age_bin_round'] = np.array(np.floor(\n",
+        "#                              np.array(boston_housing_data['age']) / 10.))\n",
+        "#boston_housing_data[['age_bin_round']]\n",
+        "#boston_housing_data.drop(columns=['age'])"
       ],
       "execution_count": 0,
       "outputs": []
