--- a/HP3 boston_housing.ipynb
+++ b/HP3 boston_housing.ipynb
@@ -6,7 +6,7 @@
       "name": "boston_housing.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPJLnTrgLkv/NPW9+EFJ42r",
+      "authorship_tag": "ABX9TyPR/W3RU0gGIypyfIEAteNt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -184,7 +184,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Sometimes model performance can be improved by grouping (or binning) the data. <br>\n",
+        "Sometimes model performance can be improved by grouping (or binning) the data. \n",
         "<br>\n",
         "Binning methods smooth a sorted data value by consulting its “neighborhood”, that is, the values around it."
       ]
@@ -196,7 +196,8 @@
         "colab_type": "text"
       },
       "source": [
-        "Uncomment the code below to use binning on the column. You can modify the code and use it on other columns. "
+        "**Uncomment the code below to use binning on the column.** <br>\n",
+        "You can modify the code and use it on other columns. "
       ]
     },
     {
