--- a/HP3 boston_housing.ipynb
+++ b/HP3 boston_housing.ipynb
@@ -6,7 +6,7 @@
       "name": "boston_housing.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPR/W3RU0gGIypyfIEAteNt",
+      "authorship_tag": "ABX9TyN0VkAdfKVq7csV66SxaV3X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -212,6 +212,30 @@
         "#                              np.array(boston_housing_data['age']) / 10.))\n",
         "#boston_housing_data[['age_bin_round']]\n",
         "#boston_housing_data.drop(columns=['age'])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Vj9QOqives_U",
+        "colab_type": "text"
+      },
+      "source": [
+        "Did binning add bias to our data?<br>\n",
+        "Print out the counts for each bin and see what the breakdown of the values."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Q9elPNxqesHf",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#boston_housing_data['age_bin_round'].value_counts()"
       ],
       "execution_count": 0,
       "outputs": []
