--- a/Hierarchical_Clustering_1.ipynb
+++ b/Hierarchical_Clustering_1.ipynb
@@ -6,7 +6,7 @@
       "name": "Hierarchical Clustering 1.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyM0E3cW5P4svsJMD0tT5v6Q",
+      "authorship_tag": "ABX9TyOghOTulk7gn8TCgY/SN/lI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,6 +24,21 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/cagBRT/Machine-Learning/blob/master/Hierarchical_Clustering_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_IcKKbZTvYa8",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!git clone -l -s https://github.com/cagBRT/Machine-Learning.git cloned-repo\n",
+        "%cd cloned-repo\n",
+        "!ls"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -123,7 +138,7 @@
         "colab_type": "text"
       },
       "source": [
-        "It is very easy to see that we have two clusters in out datapoints but in the real world data, there can be thousands of clusters. Next, we will be plotting the dendrograms of our datapoints by using Scipy library"
+        "It is very easy to see that we have two clusters in our datapoints but in the real world data, there can be thousands of clusters. Next, we will be plotting the dendrograms of our datapoints by using Scipy library"
       ]
     },
     {
@@ -133,8 +148,22 @@
         "colab_type": "text"
       },
       "source": [
-        "once the big cluster is formed, the longest vertical distance is selected. A vertical line is then drawn through it as shown in the following diagram. As the horizontal line crosses the blue line at two points, the number of clusters would be two."
+        "Once the big cluster is formed, the longest vertical distance is selected. A vertical line is then drawn through it. As the horizontal line crosses the blue line at two points, the number of clusters would be two."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "k6x5sukSvPm-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from IPython.display import Image\n",
+        "Image(\"blue_line.jpg\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -173,7 +202,7 @@
       },
       "source": [
         "cluster = AgglomerativeClustering(n_clusters = 2, affinity = 'euclidean', linkage = 'ward')\n",
-        "cluster.fit_predict(X)\n"
+        "cluster.fit_predict(X)"
       ],
       "execution_count": 0,
       "outputs": []
