--- a/Hierarchical_Clustering_1.ipynb
+++ b/Hierarchical_Clustering_1.ipynb
@@ -6,7 +6,7 @@
       "name": "Hierarchical Clustering 1.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOghOTulk7gn8TCgY/SN/lI",
+      "authorship_tag": "ABX9TyPaYgTuelon4Y77OP1iTnVr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,7 +78,9 @@
         "\n",
         ">Step 4 − Now, to form one big cluster repeat the above three steps until K would become 0 i.e. no more data points left to join.\n",
         "\n",
-        ">Step 5 − At last, after making one single big cluster, dendrograms will be used to divide into multiple clusters depending upon the problem."
+        ">Step 5 − At last, after making one single big cluster, dendrograms will be used to divide into multiple clusters depending upon the problem.<br><br>\n",
+        "\n",
+        "*A dendrogram is a diagram that shows the hierarchical relationship between objects. It is most commonly created as an output from hierarchical clustering.*"
       ]
     },
     {
