--- a/Hierarchical_Clustering_2.ipynb
+++ b/Hierarchical_Clustering_2.ipynb
@@ -6,7 +6,7 @@
       "name": "Hierarchical Clustering 2.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNl6pjFsLf7PsfeG/40wMOA",
+      "authorship_tag": "ABX9TyP3s5onVySvZ/YG3ru8A1EA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,6 +87,19 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "XYOxC5rRbxwT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#!cat pima_indians_diabetes.csv\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "wU1ntte06GUj",
         "colab_type": "code",
         "colab": {}
@@ -152,12 +165,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lE964Fph4uM9",
+        "id": "Ri7j4pEtakGX",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "patient_data = data.iloc[:, 3:5].values"
+        "data.describe"
       ],
       "execution_count": 0,
       "outputs": []
@@ -171,9 +184,9 @@
       },
       "source": [
         "plt.figure(figsize = (10, 7))\n",
-        "plt.scatter(patient_data[:,0], patient_data[:,1])\n",
-        "plt.xlabel(\"skin\")\n",
-        "plt.ylabel(\"test\")"
+        "plt.scatter(data[\"preg\"], data[\"class\"])\n",
+        "plt.xlabel(\"preg\")\n",
+        "plt.ylabel(\"class\")"
       ],
       "execution_count": 0,
       "outputs": []
@@ -210,7 +223,54 @@
       "source": [
         "plt.figure(figsize = (20, 10))\n",
         "plt.title(\"Patient Dendograms\")\n",
-        "dend = shc.dendrogram(shc.linkage(data, method = 'ward'),distance_sort=True)"
+        "plt.xlabel('sample index')\n",
+        "plt.ylabel('distance')\n",
+        "dend = shc.dendrogram(shc.linkage(data, method = 'ward'))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mL6Ag0iRZBgV",
+        "colab_type": "text"
+      },
+      "source": [
+        "A huge jump in distance is typically what we're interested in if we want to argue for a certain number of clusters. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "J2DDqx6XZSqR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def fancy_dendrogram(*args, **kwargs):\n",
+        "    max_d = kwargs.pop('max_d', None)\n",
+        "    if max_d and 'color_threshold' not in kwargs:\n",
+        "        kwargs['color_threshold'] = max_d\n",
+        "    annotate_above = kwargs.pop('annotate_above', 0)\n",
+        "\n",
+        "    ddata = dendrogram(*args, **kwargs)\n",
+        "\n",
+        "    if not kwargs.get('no_plot', False):\n",
+        "        plt.title('Hierarchical Clustering Dendrogram (truncated)')\n",
+        "        plt.xlabel('sample index or (cluster size)')\n",
+        "        plt.ylabel('distance')\n",
+        "        for i, d, c in zip(ddata['icoord'], ddata['dcoord'], ddata['color_list']):\n",
+        "            x = 0.5 * sum(i[1:3])\n",
+        "            y = d[1]\n",
+        "            if y > annotate_above:\n",
+        "                plt.plot(x, y, 'o', c=c)\n",
+        "                plt.annotate(\"%.3g\" % y, (x, y), xytext=(0, -5),\n",
+        "                             textcoords='offset points',\n",
+        "                             va='top', ha='center')\n",
+        "        if max_d:\n",
+        "            plt.axhline(y=max_d, c='k')\n",
+        "    return ddata\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -224,7 +284,7 @@
       },
       "source": [
         "# set cut-off to 50\n",
-        "max_d = 50  # max_d as in max_distance"
+        "max_d = 3000  # max_d as in max_distance"
       ],
       "execution_count": 0,
       "outputs": []
@@ -232,14 +292,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AQaQK4dxGUx1",
+        "id": "-XUm_m4XZV-F",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "\n",
-        "dend(\n",
-        "    data,\n",
+        "fancy_dendrogram(\n",
+        "    Z,\n",
         "    truncate_mode='lastp',\n",
         "    p=12,\n",
         "    leaf_rotation=90.,\n",
@@ -248,7 +307,7 @@
         "    annotate_above=10,\n",
         "    max_d=max_d,  # plot a horizontal cut-off line\n",
         ")\n",
-        "plt.show()"
+        "plt.show()\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -261,7 +320,7 @@
         "colab": {}
       },
       "source": [
-        "cluster = AgglomerativeClustering(n_clusters = 3, affinity = 'euclidean', linkage = 'ward')\n",
+        "cluster = AgglomerativeClustering(n_clusters = 2, affinity = 'euclidean', linkage = 'ward')\n",
         "cluster.fit_predict(patient_data)\n",
         "plt.figure(figsize = (10, 7))\n",
         "plt.scatter(patient_data[:,0], patient_data[:,1], c = cluster.labels_, cmap = 'rainbow')\n",
