--- a/Hierarchical_Clustering_2.ipynb
+++ b/Hierarchical_Clustering_2.ipynb
@@ -6,7 +6,7 @@
       "name": "Hierarchical Clustering 2.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyP3s5onVySvZ/YG3ru8A1EA",
+      "authorship_tag": "ABX9TyNYztThDzXRjlVSA2acNPLT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -178,15 +178,28 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "huzNlZVyqz29",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "patient_data = data[\"skin\"], data[\"test\"]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "le3wyOlt81Nj",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
         "plt.figure(figsize = (10, 7))\n",
-        "plt.scatter(data[\"preg\"], data[\"class\"])\n",
-        "plt.xlabel(\"preg\")\n",
-        "plt.ylabel(\"class\")"
+        "plt.scatter(patient_data[0],patient_data[1])\n",
+        "plt.xlabel(\"skin\")\n",
+        "plt.ylabel(\"test\")"
       ],
       "execution_count": 0,
       "outputs": []
@@ -284,7 +297,7 @@
       },
       "source": [
         "# set cut-off to 50\n",
-        "max_d = 3000  # max_d as in max_distance"
+        "max_d = 2500  # max_d as in max_distance"
       ],
       "execution_count": 0,
       "outputs": []
@@ -307,7 +320,37 @@
         "    annotate_above=10,\n",
         "    max_d=max_d,  # plot a horizontal cut-off line\n",
         ")\n",
-        "plt.show()\n"
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jHF2eU7ZrUn6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "cluster = AgglomerativeClustering(n_clusters = 2, affinity = 'euclidean', linkage = 'ward')\n",
+        "cluster.fit_predict(patient_data)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Sjr_93bCrsvX",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from scipy.cluster.hierarchy import fcluster\n",
+        "max_d = 2500\n",
+        "clusters = fcluster(Z, max_d, criterion='distance')\n",
+        "clusters"
       ],
       "execution_count": 0,
       "outputs": []
@@ -320,10 +363,9 @@
         "colab": {}
       },
       "source": [
-        "cluster = AgglomerativeClustering(n_clusters = 2, affinity = 'euclidean', linkage = 'ward')\n",
-        "cluster.fit_predict(patient_data)\n",
+        "\n",
         "plt.figure(figsize = (10, 7))\n",
-        "plt.scatter(patient_data[:,0], patient_data[:,1], c = cluster.labels_, cmap = 'rainbow')\n",
+        "plt.scatter(patient_data[0], patient_data[1], c = clusters, cmap = 'rainbow')\n",
         "plt.xlabel(\"skin\")\n",
         "plt.ylabel(\"test\")"
       ],
