--- a/Hierarchical_Clustering_2.ipynb
+++ b/Hierarchical_Clustering_2.ipynb
@@ -6,7 +6,7 @@
       "name": "Hierarchical Clustering 2.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNYztThDzXRjlVSA2acNPLT",
+      "authorship_tag": "ABX9TyO+6KObrrmcc8XzXs5GfYzy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -363,11 +363,23 @@
         "colab": {}
       },
       "source": [
-        "\n",
         "plt.figure(figsize = (10, 7))\n",
         "plt.scatter(patient_data[0], patient_data[1], c = clusters, cmap = 'rainbow')\n",
         "plt.xlabel(\"skin\")\n",
         "plt.ylabel(\"test\")"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LzckwEKKsHY8",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
