--- a/Hierarchical_Clustering_1.ipynb
+++ b/Hierarchical_Clustering_1.ipynb
@@ -6,7 +6,7 @@
       "name": "Hierarchical Clustering 1.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyM8rWPzZKhcpBre/LRdZHLk",
+      "authorship_tag": "ABX9TyOcVGFlwTOkmmPH/pi7MQqZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -114,21 +114,40 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cyh_g_-irGQP",
+        "id": "2dma3wljhs53",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "X = np.array(\n",
-        "   [[7,8],[12,20],[17,19],[26,15],[32,37],[87,75],[73,85], [62,80],[73,60],[87,96],])\n",
-        "labels = range(1, 11)\n",
-        "plt.figure(figsize = (6, 5))\n",
+        "#NUMBER OF DATA POINTS\n",
+        "N = 200\n",
+        "\n",
+        "#NUMBER OF CLUSTERS\n",
+        "C = 5"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oN46JDhyf3hK",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.datasets import make_blobs\n",
+        "X, y = make_blobs(n_samples=N, centers=C, n_features=2,\n",
+        "                  random_state=0)\n",
+        "\n",
+        "labels = range(1, N+1)\n",
+        "plt.figure(figsize = (10, 10))\n",
         "plt.subplots_adjust(bottom = 0.1)\n",
         "plt.scatter(X[:,0],X[:,1], label = 'True Position')\n",
         "for label, x, y in zip(labels, X[:, 0], X[:, 1]):\n",
         "   plt.annotate(\n",
         "      label,xy = (x, y), xytext = (-3, 3),textcoords = 'offset points', ha = 'right', va = 'bottom')\n",
-        "plt.show()"
+        "plt.show()\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -162,10 +181,11 @@
       },
       "source": [
         "linked = linkage(X, 'single')\n",
-        "labelList = range(1, 11)\n",
-        "plt.figure(figsize = (10, 7))\n",
-        "dendrogram(linked, orientation = 'top',labels = labelList, \n",
-        "   distance_sort ='descending',show_leaf_counts = True)\n",
+        "labelList = range(1, N+1)\n",
+        "plt.figure(figsize = (10, 5))\n",
+        "dendrogram(linked, orientation = 'top',labels = labelList, distance_sort ='descending',show_leaf_counts = True)\n",
+        "plt.xlabel('sample index')\n",
+        "plt.ylabel('distance')\n",
         "plt.show()"
       ],
       "execution_count": 0,
