--- a/Hierarchical_Clustering_2.ipynb
+++ b/Hierarchical_Clustering_2.ipynb
@@ -6,7 +6,7 @@
       "name": "Hierarchical Clustering 2.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMiWRHY4dYHHG559DX05qb4",
+      "authorship_tag": "ABX9TyOkMtFPNqr5ZczWhMnm9Xmm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,6 +51,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KzaxMRqrsH3M",
+        "colab_type": "text"
+      },
+      "source": [
+        "Import libraries"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "t4zcX3gP4FmU",
@@ -68,6 +78,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aPuS5dBasK7t",
+        "colab_type": "text"
+      },
+      "source": [
+        "Get the data and prepare the data<br>"
+      ]
     },
     {
       "cell_type": "code",
@@ -267,7 +287,7 @@
         "        kwargs['color_threshold'] = max_d\n",
         "    annotate_above = kwargs.pop('annotate_above', 0)\n",
         "\n",
-        "    ddata = dendrogram(*args, **kwargs)\n",
+        "    ddata = shc.dendrogram(*args, **kwargs)\n",
         "\n",
         "    if not kwargs.get('no_plot', False):\n",
         "        plt.title('Hierarchical Clustering Dendrogram (truncated)')\n",
@@ -297,7 +317,8 @@
       },
       "source": [
         "# set cut-off to 50\n",
-        "max_d = 2500  # max_d as in max_distance"
+        "max_d = 2500  # max_d as in max_distance\n",
+        "Z = shc.linkage(data, 'ward')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -348,7 +369,6 @@
       },
       "source": [
         "from scipy.cluster.hierarchy import fcluster\n",
-        "max_d = 2500\n",
         "clusters = fcluster(Z, max_d, criterion='distance')\n",
         "clusters"
       ],
