--- a/wolvesAndCows.ipynb
+++ b/wolvesAndCows.ipynb
@@ -42,27 +42,27 @@
           "base_uri": "https://localhost:8080/",
           "height": 760
         },
-        "outputId": "2e258b04-3a3d-41ac-f275-cd23031de370"
+        "outputId": "baffaa9f-5939-447b-ae9b-2dea3f9f6d60"
       },
       "source": [
         "!git clone -l -s https://github.com/cagBRT/Machine-Learning.git cloned-repo\n",
         "%cd cloned-repo\n",
         "!ls"
       ],
-      "execution_count": 1,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Cloning into 'cloned-repo'...\n",
             "warning: --local is ignored\n",
-            "remote: Enumerating objects: 30, done.\u001b[K\n",
-            "remote: Counting objects: 100% (30/30), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (30/30), done.\u001b[K\n",
-            "remote: Total 738 (delta 15), reused 0 (delta 0), pack-reused 708\u001b[K\n",
-            "Receiving objects: 100% (738/738), 26.92 MiB | 19.73 MiB/s, done.\n",
-            "Resolving deltas: 100% (456/456), done.\n",
-            "/content/cloned-repo\n",
+            "remote: Enumerating objects: 33, done.\u001b[K\n",
+            "remote: Counting objects:   3% (1/33)\u001b[K\rremote: Counting objects:   6% (2/33)\u001b[K\rremote: Counting objects:   9% (3/33)\u001b[K\rremote: Counting objects:  12% (4/33)\u001b[K\rremote: Counting objects:  15% (5/33)\u001b[K\rremote: Counting objects:  18% (6/33)\u001b[K\rremote: Counting objects:  21% (7/33)\u001b[K\rremote: Counting objects:  24% (8/33)\u001b[K\rremote: Counting objects:  27% (9/33)\u001b[K\rremote: Counting objects:  30% (10/33)\u001b[K\rremote: Counting objects:  33% (11/33)\u001b[K\rremote: Counting objects:  36% (12/33)\u001b[K\rremote: Counting objects:  39% (13/33)\u001b[K\rremote: Counting objects:  42% (14/33)\u001b[K\rremote: Counting objects:  45% (15/33)\u001b[K\rremote: Counting objects:  48% (16/33)\u001b[K\rremote: Counting objects:  51% (17/33)\u001b[K\rremote: Counting objects:  54% (18/33)\u001b[K\rremote: Counting objects:  57% (19/33)\u001b[K\rremote: Counting objects:  60% (20/33)\u001b[K\rremote: Counting objects:  63% (21/33)\u001b[K\rremote: Counting objects:  66% (22/33)\u001b[K\rremote: Counting objects:  69% (23/33)\u001b[K\rremote: Counting objects:  72% (24/33)\u001b[K\rremote: Counting objects:  75% (25/33)\u001b[K\rremote: Counting objects:  78% (26/33)\u001b[K\rremote: Counting objects:  81% (27/33)\u001b[K\rremote: Counting objects:  84% (28/33)\u001b[K\rremote: Counting objects:  87% (29/33)\u001b[K\rremote: Counting objects:  90% (30/33)\u001b[K\rremote: Counting objects:  93% (31/33)\u001b[K\rremote: Counting objects:  96% (32/33)\u001b[K\rremote: Counting objects: 100% (33/33)\u001b[K\rremote: Counting objects: 100% (33/33), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (33/33), done.\u001b[K\n",
+            "remote: Total 741 (delta 16), reused 0 (delta 0), pack-reused 708\u001b[K\n",
+            "Receiving objects: 100% (741/741), 26.97 MiB | 20.29 MiB/s, done.\n",
+            "Resolving deltas: 100% (457/457), done.\n",
+            "/content/cloned-repo/cloned-repo\n",
             " Admission_Predict.csv\t\t       LogisticRegression_1.ipynb\n",
             " bank.csv\t\t\t       Logistic_Regression_3.ipynb\n",
             " bank-full.csv\t\t\t       Logistic_Regression_4.ipynb\n",
@@ -127,7 +127,7 @@
         "from sklearn import tree\n",
         "import pandas as pd"
       ],
-      "execution_count": 2,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -177,7 +177,7 @@
         " pl.title(clf_name)\n",
         " pl.legend(loc=\"best\")"
       ],
-      "execution_count": 13,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -201,45 +201,8 @@
         "data = open(\"cows_and_wolves.txt\").read()\n",
         "data = [row.split('\\t') for row in data.strip().split('\\n')]\n"
       ],
-      "execution_count": 33,
+      "execution_count": 51,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Ivq5WFVAfchl",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 155
-        },
-        "outputId": "17474238-964f-44ab-b8ca-11b15208d274"
-      },
-      "source": [
-        "data"
-      ],
-      "execution_count": 26,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[['o', '', 'o', '', 'o', ''],\n",
-              " ['', 'o', '', ' ', 'x', '', ''],\n",
-              " ['o', '', '', 'x', 'x', 'x', ''],\n",
-              " ['', '', '', 'x', '', '', 'o'],\n",
-              " ['', '', '', 'x', 'x', 'x', 'o'],\n",
-              " ['', '', 'x', '', '', '', ''],\n",
-              " ['', '', '', '', 'o', '', 'o'],\n",
-              " ['', '', 'o']]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 26
-        }
-      ]
     },
     {
       "cell_type": "markdown",
@@ -266,7 +229,7 @@
         "        if item in ['o', 'x']:\n",
         "            animals.append([x, y, item])"
       ],
-      "execution_count": 35,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -293,7 +256,7 @@
         "\n",
         "plt_nmbr = 1"
       ],
-      "execution_count": 36,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -315,7 +278,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 282
         },
-        "outputId": "5c91746e-2c3b-4167-a22c-e7b336c020de"
+        "outputId": "6c40eb19-ea26-43a1-b324-ab3d6aa16ac0"
       },
       "source": [
         " # plot the wolves and cows\n",
@@ -329,7 +292,7 @@
         "pl.legend()\n",
         "pl.show"
       ],
-      "execution_count": 37,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -341,7 +304,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 37
+          "execution_count": 55
         },
         {
           "output_type": "display_data",
@@ -377,16 +340,15 @@
           "base_uri": "https://localhost:8080/",
           "height": 341
         },
-        "outputId": "0e944abc-fa03-4ffb-8b4b-3a863dbc2271"
+        "outputId": "ec4dca08-8ed6-45a0-fc29-68f0c986b1df"
       },
       "source": [
         "clf = linear_model.LogisticRegression()\n",
         "clf.fit(df[train_cols], df.animal_type)\n",
         "plot_results_with_hyperplane(clf, clf, df, plt_nmbr)\n",
-        "plt_nmbr += 1\n",
         "pl.show()"
       ],
-      "execution_count": 45,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "display_data",
@@ -422,17 +384,16 @@
           "base_uri": "https://localhost:8080/",
           "height": 298
         },
-        "outputId": "8fff040c-cb1d-4ed3-9b31-25ef9043a634"
+        "outputId": "d6b84c42-abe6-4d6b-a2bc-d6b499a5458b"
       },
       "source": [
         "clf = tree.DecisionTreeClassifier()\n",
         "clf.fit(df[train_cols], df.animal_type)\n",
         "plot_results_with_hyperplane(clf, \"Decision Tree\", df, 1)\n",
-        "#plt_nmbr += 1\n",
         "pl.figure(figsize=[10,10])\n",
         "pl.show()"
       ],
-      "execution_count": 46,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "display_data",
@@ -479,17 +440,16 @@
           "base_uri": "https://localhost:8080/",
           "height": 298
         },
-        "outputId": "6a866aea-d5b0-4541-e9eb-ffcbed5aea7f"
+        "outputId": "381f4b32-6901-4000-88f6-9ab8dfdd3b20"
       },
       "source": [
         "clf = svm.SVC()\n",
         "clf.fit(df[train_cols], df.animal_type)\n",
         "plot_results_with_hyperplane(clf, \"SVM\", df, 1)\n",
-        "#plt_nmbr += 1\n",
         "pl.figure(figsize=[10,10])\n",
         "pl.show()"
       ],
-      "execution_count": 47,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "display_data",
