--- a/SVM_MultiClass.ipynb
+++ b/SVM_MultiClass.ipynb
@@ -6,7 +6,7 @@
       "name": "SVM MultiClass.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyM101chxDIOhngoqNWlRxqL",
+      "authorship_tag": "ABX9TyPtrLrziRB+v1wN4LcIptHS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
         "%cd cloned-repo\n",
         "!ls"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -64,7 +64,7 @@
         "\n",
         "import os"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -93,7 +93,7 @@
         "train = shuffle(pd.read_csv(\"trainPhone.csv\"))\n",
         "test = shuffle(pd.read_csv(\"testPhone.csv\"))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -107,7 +107,7 @@
         "print(train.shape)\n",
         "print(train.columns)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -120,7 +120,7 @@
       "source": [
         "train"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -144,7 +144,7 @@
         "print(\"Any missing sample in training set:\",train.isnull().values.any())\n",
         "print(\"Any missing sample in test set:\",test.isnull().values.any(), \"\\n\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -171,7 +171,7 @@
         "\n",
         "train_outcome"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -199,7 +199,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -230,7 +230,7 @@
         "print(\"Dimension of Train set\",X_train.shape)\n",
         "print(\"Dimension of Test set\",X_test.shape,\"\\n\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -243,7 +243,7 @@
       "source": [
         "X_train"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -254,9 +254,9 @@
         "colab": {}
       },
       "source": [
-        "Y_train"
+        "Y_train_label"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -295,7 +295,7 @@
         "#list(set(X_train.columns) - set(num_cols))\n",
         "names_of_predictors = list(X_train.columns.values)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -322,7 +322,7 @@
         "X_train_scaled = scaler.fit_transform(X_train)\n",
         "X_test_scaled = scaler.transform(X_test)\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -363,7 +363,7 @@
         "                     'C': [1, 10, 100, 1000]},\n",
         "                    {'kernel': ['linear'], 'C': [1, 10, 100, 1000]}]"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -379,7 +379,7 @@
         "print('Best Kernel:',svm_model.best_estimator_.kernel,\"\\n\")\n",
         "print('Best Gamma:',svm_model.best_estimator_.gamma,\"\\n\")"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -405,7 +405,7 @@
         "svm_model = GridSearchCV(SVC(), params_grid, cv=5)\n",
         "svm_model.fit(X_train_scaled, Y_train)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -429,7 +429,7 @@
         "# View the accuracy score\n",
         "print('Best score for training data:', svm_model.best_score_,\"\\n\") "
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -454,7 +454,7 @@
         "Y_pred = final_model.predict(X_test_scaled)\n",
         "Y_pred_label = list(encoder.inverse_transform(Y_pred))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -476,7 +476,7 @@
         "\n",
         "svm_model.score"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     }
   ]
